--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-player": "^2.15.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
