--- a/server/.env
+++ b/server/.env
@@ -1,10 +1,11 @@
 API_KEY = 7d88930d8613ec1bf4a5ff3b46965a64
 
-API_KEY2 = 7e6b29e334f4d2437a53404bcb93e095
-
 DB_USERNAME = danielribeiro
 DB_PASSWORD = 5DOXiWXXHGY21zd2
-
 DB_CONNECTION = mongodb+srv://10danielribeiro:b5BVBdUHMWCU0lha@module7.hwlqh8n.mongodb.net/?retryWrites=true&w=majority&appName=Module7
 
 JWT_SECRET = JzP8akO2m54x13x0jQ9zAHukOdBjpnk4
+
+PORT = 3456
+
+SALT_ROUNDS = 10
